Fix mobile navigation alignment

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -152,7 +152,8 @@ main {
 }
 
 .navigation {
-  width: 80%;
+  width: 100%;
+  max-width: 80%;
 
   ul {
     list-style-type: none;
@@ -459,9 +460,9 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 40px;
+    margin: 0 10px;
     @media screen and (max-width: $smallMobileW){
-      margin: 0 20px;
+      margin: 0;
     }
     border-top: 1px solid #eee;
   }
